// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should not show templates chooser in toolbar if types are not available 1`] = `
Object {
  "backButton": undefined,
  "items": Array [
    Object {
      "disabled": true,
      "icon": "floppy-o",
      "loading": false,
      "onClick": [Function],
      "type": "button",
      "value": "Save",
    },
  ],
  "locale": undefined,
}
`;

exports[`Should show loading templates chooser in toolbar while types are loading 1`] = `
Object {
  "backButton": undefined,
  "items": Array [
    Object {
      "disabled": true,
      "icon": "floppy-o",
      "loading": false,
      "onClick": [Function],
      "type": "button",
      "value": "Save",
    },
    Object {
      "icon": "paint-brush",
      "loading": true,
      "onChange": [Function],
      "options": Array [],
      "type": "select",
      "value": "sidebar",
    },
  ],
  "locale": undefined,
}
`;

exports[`Should show templates chooser in toolbar if types are available 1`] = `
Object {
  "backButton": undefined,
  "items": Array [
    Object {
      "disabled": true,
      "icon": "floppy-o",
      "loading": false,
      "onClick": [Function],
      "type": "button",
      "value": "Save",
    },
    Object {
      "icon": "paint-brush",
      "loading": false,
      "onChange": [Function],
      "options": Array [
        Object {
          "label": "Sidebar",
          "value": "sidebar",
        },
        Object {
          "label": "Footer",
          "value": "footer",
        },
      ],
      "type": "select",
      "value": "sidebar",
    },
  ],
  "locale": undefined,
}
`;
